--- a/online-mall-web/src/main/resources/static/css/login/login.css
+++ b/online-mall-web/src/main/resources/static/css/login/login.css
@@ -1,6 +1,6 @@
 body {
     color: #fff;
-    font-family: "微软雅黑";
+    font-family: "微软雅黑", serif;
     font-size: 14px;
     background:url(../../imgs/bg1.jpg) no-repeat;
 }
