--- a/online-mall-web/src/main/resources/static/css/login/login.css
+++ b/online-mall-web/src/main/resources/static/css/login/login.css
@@ -1,7 +1,8 @@
 body {
     color: #fff;
     font-family: "微软雅黑", serif;
-    font-size: 14px;
+    /*font-size: 14px;*/
+    font-size: 0.08rem;
     background:url(../../imgs/bg1.jpg) no-repeat;
 }
 
@@ -87,3 +88,37 @@ body {
     background: -moz-linear-gradient(#4990c1, #52a3d2, #6186a3); /* Firefox 3.6 - 15 */
     background: linear-gradient(#4990c1, #52a3d2, #6186a3); /* 标准的语法 */
 }
+
+
+/*-------------------------------------------------------------------------------------------------------*/
+/* 测试用的框框 <div class="test1"> <div class="test2"></div> </div>
+.test1 {
+    position: absolute;
+    left: 4rem; !*768px*!
+    top: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    opacity: 0.5;
+
+    font-family: 'Arial Normal', 'Arial', serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 13px;
+    color: #333333;
+    text-align: center;
+    line-height: normal;
+}
+.test2 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 2rem;
+    height: 2rem;
+    background: inherit;
+    background-color: rgba(255, 255, 255, 1);
+    border: none;
+    border-radius: 0.2rem;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}*/
